--- a/WolvenKit/Views/Documents/DocumentView.xaml
+++ b/WolvenKit/Views/Documents/DocumentView.xaml
@@ -4,15 +4,12 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:reactiveUi="http://reactiveui.net"
-    xmlns:converters1="clr-namespace:WolvenKit.Functionality.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
-    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
     xmlns:templates="clr-namespace:WolvenKit.Views.Templates"
     xmlns:documents="clr-namespace:WolvenKit.ViewModels.Documents;assembly=WolvenKit.App"
-    xmlns:shell="clr-namespace:WolvenKit.ViewModels.Shell;assembly=WolvenKit.App"
+    xmlns:documents1="clr-namespace:WolvenKit.Views.Documents"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d"
@@ -23,310 +20,8 @@
 
         <Grid.Resources>
             
-
             <DataTemplate x:Key="MainTemplate">
-                <Grid >
-
-                    <Grid.Resources>
-                        <ResourceDictionary>
-                            <ResourceDictionary.MergedDictionaries>
-                                <hc:ThemeResources RequestedTheme="Dark" />
-                                <hc:Theme />
-                            </ResourceDictionary.MergedDictionaries>
-
-                            <Style TargetType="{x:Type syncfusion:AdvancedFilterControl}">
-                                <Setter Property="CanGenerateUniqueItems" Value="False" />
-                            </Style>
-
-                        </ResourceDictionary>
-
-                    </Grid.Resources>
-
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="5"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-
-                    <!-- Additional Navigation -->
-                    <Grid Grid.Column="0" >
-
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-
-                        <Grid Grid.Column="0" HorizontalAlignment="Stretch" Margin="2">
-
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-
-                            <Button Grid.Column="0" x:Name="ChunksButton"  Height="Auto" Width="Auto" Margin="3" Click="ChunksButton_OnClick" >
-                                <Button.Content>
-                                    <iconPacks:PackIconVaadinIcons Kind="Cubes" />
-                                </Button.Content>
-                            </Button>
-                            <Button Grid.Column="1"  x:Name="ImportsButton"  Height="Auto" Width="Auto" Margin="3" Click="ImportsButton_OnClick" >
-                                <Button.Content>
-                                    <iconPacks:PackIconMaterialDesign Kind="ImportExport" />
-                                </Button.Content>
-                            </Button>
-                        </Grid>
-
-                        <Grid Grid.Row="1"  x:Name="CHUNKSVISIBILITY">
-                            <syncfusion:SfTreeGrid  Margin="2"
-                                            x:Name="TreeView"
-                                            AllowEditing="False"
-                                            AllowFiltering="True"
-                                            AllowResizingColumns="False"
-                                            AutoExpandMode="RootNodesExpanded"
-                                            AutoGenerateColumns="False"
-                                            ChildPropertyName="Children"
-                                            ColumnSizer="FillColumn"
-                                            ItemsSource="{Binding Chunks}"
-                                            SelectedItem="{Binding SelectedChunk}"
-                                            Style="{DynamicResource SyncfusionSfTreeGridStyle}">
-
-                                <syncfusion:SfTreeGrid.Resources>
-                                    <Style TargetType="syncfusion:TreeGridCell">
-                                        <Setter Property="BorderBrush" Value="Transparent" />
-                                        <Setter Property="BorderThickness" Value="0" />
-                                    </Style>
-                                    <Style TargetType="syncfusion:TreeGridExpanderCell">
-                                        <Setter Property="BorderBrush" Value="Transparent" />
-                                        <Setter Property="BorderThickness" Value="0" />
-                                    </Style>
-                                    <converters1:ExtensionToBitmapConverter x:Key="ExtensionToBmp" />
-
-                                </syncfusion:SfTreeGrid.Resources>
-
-                                <syncfusion:SfTreeGrid.Columns>
-
-                                    <syncfusion:TreeGridTextColumn HeaderText="Chunks" MappingName="Name" />
-
-                                </syncfusion:SfTreeGrid.Columns>
-
-                            </syncfusion:SfTreeGrid>
-                        </Grid>
-
-                        <Grid Grid.Row="1" x:Name="IMPORTSVISISBILITY" Visibility="Collapsed">
-                            <ListView
-                                        Margin="2"
-                                        ItemsSource="{Binding Imports}"
-                                        SelectedItem="{Binding SelectedImport}">
-
-                                <ListView.View>
-                                    <GridView>
-                                        <GridViewColumn DisplayMemberBinding="{Binding DepotPathStr}" Header="Name" />
-                                    </GridView>
-                                </ListView.View>
-
-                                <hc:Interaction.Triggers>
-                                    <hc:EventTrigger EventName="MouseDoubleClick">
-                                        <hc:EventToCommand Command="{Binding OpenImportCommand}" CommandParameter="{Binding SelectedImport}" />
-                                    </hc:EventTrigger>
-                                </hc:Interaction.Triggers>
-                            </ListView>
-
-                        </Grid>
-
-
-                    </Grid>
-
-                    <!-- Grid Splitter -->
-                    <syncfusion:SfGridSplitter Grid.Column="1" HorizontalAlignment="Stretch" />
-
-                    <!-- CR2W TreeGrid -->
-                    <Grid Grid.Column="2">
-
-                        <Grid.Resources>
-
-                            <DataTemplate x:Key="CommmonTemplate">
-                                <TextBlock Padding="5" Text="{Binding Value}" Foreground="Gray" />
-                            </DataTemplate>
-
-                            <DataTemplate x:Key="StringTemplateView">
-                                <TextBox syncfusion:FocusManagerHelper.FocusedElement="True"
-                                 Height="22"
-                                 Margin="0"
-                                 Padding="3,3,0,0"
-                                 VerticalAlignment="Center"
-                                 Background="Transparent"
-                                 BorderBrush="Transparent"
-                                 Style="{DynamicResource MahApps.Styles.TextBox.DataGrid.Editing}"
-                                 Text="{Binding Property.Value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                                    <hc:Interaction.Triggers>
-                                        <hc:EventTrigger EventName="PreviewTextInput">
-                                            <hc:InvokeCommandAction Command="{Binding PreviewTextInputCommand}" />
-                                        </hc:EventTrigger>
-                                    </hc:Interaction.Triggers>
-                                </TextBox>
-                            </DataTemplate>
-
-                            <DataTemplate x:Key="ColorTemplateView">
-
-                                <syncfusion:ColorPickerPalette syncfusion:FocusManagerHelper.FocusedElement="True"
-                                                       GenerateThemeVariants="False"
-                                                       Padding="3,-4,0,0"
-                                                       Color="{Binding DisplayColor}"
-                                                       SelectedCommand="{Binding SelectedColorCommand}"
-                                                       d:DataContext="{d:DesignInstance shell:RedColorViewModel}"
-                                                       />
-                            </DataTemplate>
-
-                            <DataTemplate x:Key="RefTemplateView">
-                                <TextBox    syncfusion:FocusManagerHelper.FocusedElement="True"
-                                    Height="22"
-                                    Margin="0"
-                                    Padding="3,3,0,0"
-                                    VerticalAlignment="Center"
-                                    Background="Transparent"
-                                    BorderBrush="Transparent"
-                                    Style="{DynamicResource MahApps.Styles.TextBox.DataGrid.Editing}"
-                                    Text="{Binding Property.DepotPath}">
-                                    <hc:Interaction.Triggers>
-                                        <hc:EventTrigger EventName="PreviewTextInput">
-                                            <hc:InvokeCommandAction Command="{Binding PreviewTextInputCommand}" />
-                                        </hc:EventTrigger>
-                                    </hc:Interaction.Triggers>
-                                </TextBox>
-                            </DataTemplate>
-
-                            <DataTemplate x:Key="RedboolTemplate">
-                                <CheckBox syncfusion:FocusManagerHelper.FocusedElement="True"
-                                  Margin="3,0,0,0"
-                                  Padding="5"
-                                  HorizontalAlignment="Left"
-                                  IsChecked="{Binding Property.Value}"
-                                  Style="{DynamicResource MahApps.Styles.CheckBox.DataGrid}"
-                        >
-                                    <hc:Interaction.Triggers>
-                                        <hc:EventTrigger EventName="Checked">
-                                            <hc:InvokeCommandAction Command="{Binding PreviewTextInputCommand}" />
-                                        </hc:EventTrigger>
-                                        <hc:EventTrigger EventName="Unchecked">
-                                            <hc:InvokeCommandAction Command="{Binding PreviewTextInputCommand}" />
-                                        </hc:EventTrigger>
-                                    </hc:Interaction.Triggers>
-                                </CheckBox>
-                            </DataTemplate>
-
-                            <DataTemplate x:Key="EnumTemplate">
-                                <templates:EnumTemplateView
-                            syncfusion:FocusManagerHelper.FocusedElement="True"
-                            RedEnum="{Binding Property}"
-                            d:DataContext="{d:DesignInstance shell:ChunkPropertyViewModel }" />
-                            </DataTemplate>
-
-                            <DataTemplate x:Key="HandleTemplate">
-                                <templates:HandleTemplateView
-                            syncfusion:FocusManagerHelper.FocusedElement="True"
-                            RedChunkPtr="{Binding Property}"
-                          d:DataContext="{d:DesignInstance shell:ChunkPropertyViewModel }"
-                          GoToChunkRequested="HandleTemplateView_OnGoToChunkRequested"
-                          />
-                            </DataTemplate>
-
-                            <DataTemplate x:Key="SingleChannelCurveTemplate">
-                                <Button x:Name="CurveEditorButton" Content="Open Curve Editor"
-                                syncfusion:FocusManagerHelper.FocusedElement="True"
-                                d:DataContext="{d:DesignInstance shell:ChunkPropertyViewModel }"
-                                Click="CurveEditorButton_OnClick" Tag="{Binding Property}" />
-                            </DataTemplate>
-
-                            <templates:EditableVariableDataTemplateSelector
-                                    x:Key="DataTemplateSelector"
-                                    CommmonTemplate="{StaticResource CommmonTemplate}"
-
-                                    EnumTemplate="{StaticResource EnumTemplate}"
-
-                                    HandleTemplateView="{StaticResource HandleTemplate}"
-
-                                    RedboolTemplate="{StaticResource RedboolTemplate}"
-
-                                    RefTemplateView="{StaticResource RefTemplateView}"
-
-                                    NumericTemplate="{StaticResource StringTemplateView}"
-
-                                    StringTemplateView="{StaticResource StringTemplateView}"
-
-                                    ColorTemplateView="{StaticResource ColorTemplateView}"
-
-                                    SingleChannelCurveTemplate="{StaticResource SingleChannelCurveTemplate}"
-                                    />
-
-                            <converters1:CellStyleConverter x:Key="converter" />
-
-                        </Grid.Resources>
-
-                        <syncfusion:SfTreeGrid 
-                                       x:Name="MainTreeGrid"
-                                       AllowFiltering="True"
-                                       AllowResizingColumns="True"
-                                       AutoExpandMode="RootNodesExpanded"
-                                       AutoGenerateColumns="False"
-                                       ChildPropertyName="Children"
-                                       ColumnSizer="Star"
-                                       ItemsSource="{Binding ChunkProperties}"
-                                       Style="{DynamicResource SyncfusionSfTreeGridStyle}"
-                >
-
-                            <syncfusion:SfTreeGrid.Columns>
-
-                                <syncfusion:TreeGridTextColumn
-                                        AllowEditing="False"
-                                        ColumnSizer="SizeToCells"
-                                        HeaderText="Name"
-                                        MappingName="Name">
-                                    <syncfusion:TreeGridTextColumn.CellStyle>
-                                        <Style TargetType="syncfusion:TreeGridCell">
-                                            <Setter Property="Background" Value="{Binding Converter={StaticResource converter}}"/>
-                                        </Style>
-                                    </syncfusion:TreeGridTextColumn.CellStyle>
-                                </syncfusion:TreeGridTextColumn>
-
-                                <syncfusion:TreeGridTemplateColumn AllowFocus="True"
-                                                           AllowEditing="True"
-                                                           AllowSorting="False"
-                                                           CellTemplateSelector="{StaticResource DataTemplateSelector}"
-                                                           ColumnSizer="FillColumn"
-                                                           HeaderText="Value"
-                                                           MappingName="Property" />
-
-                                <syncfusion:TreeGridTextColumn
-                                        AllowEditing="False"
-                                        ColumnSizer="SizeToCells"
-                                        HeaderText="Type"
-                                        MappingName="Type" />
-
-                                <syncfusion:TreeGridCheckBoxColumn
-                                        MappingName="IsSerialized"
-                                        AllowEditing="true"
-                                        HeaderText="Serialized"
-                                        ColumnSizer="SizeToHeader"
-
-                                        />
-
-                            </syncfusion:SfTreeGrid.Columns>
-
-                        </syncfusion:SfTreeGrid>
-
-                        <!--<syncfusion:PropertyGrid
-                                x:Name="PropertyGrid"
-                                Grid.Column="1"
-                                SelectedObject="{Binding SelectedChunk.Data}"
-                                PropertyExpandMode="NestedMode"
-                                AutoGeneratingPropertyGridItem="PropertyGrid_AutoGeneratingPropertyGridItem"
-                                >
-
-                            </syncfusion:PropertyGrid>-->
-
-                    </Grid>
-
-                </Grid>
-
+                <documents1:W2rcMainFileView />
             </DataTemplate>
 
             <DataTemplate x:Key="BufferTemplate">
@@ -335,26 +30,16 @@
                 </Border>
             </DataTemplate>
 
-            <templates:RedDocumentTemplateSelector
-                                    x:Key="RedDocumentTemplateSelector"
-                                    MainTemplate="{StaticResource MainTemplate}"
-
-                                    BufferTemplate="{StaticResource BufferTemplate}"
-
-                                    />
+            <templates:RedDocumentTemplateSelector x:Key="RedDocumentTemplateSelector"
+                                                   MainTemplate="{StaticResource MainTemplate}"
+                                                   BufferTemplate="{StaticResource BufferTemplate}" />
         </Grid.Resources>
-        
+
         <hc:TabControl x:Name="TabControl"
                        ItemsSource="{Binding TabItemViewModels, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                       SelectedIndex="{Binding SelectedIndex}"
                        ContentTemplateSelector="{StaticResource RedDocumentTemplateSelector}"
-                       IsAnimationEnabled="True" ShowCloseButton="False" IsDraggable="False" >
-
-            <hc:TabControl.Resources>
-
-               
-
-            </hc:TabControl.Resources>
-
+                       IsAnimationEnabled="True" ShowCloseButton="False" IsDraggable="False">
         </hc:TabControl>
         
        
