--- a/WolvenKit/Views/Documents/W2rcMainFileView.xaml
+++ b/WolvenKit/Views/Documents/W2rcMainFileView.xaml
@@ -1,5 +1,5 @@
 <reactiveUi:ReactiveUserControl
-    x:TypeArguments="documents:W2rcMainFileViewModel"
+    x:TypeArguments="documents:W2rcFileViewModel"
     x:Class="WolvenKit.Views.Documents.W2rcMainFileView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -15,7 +15,7 @@
     xmlns:shell="clr-namespace:WolvenKit.ViewModels.Shell;assembly=WolvenKit.App"
     mc:Ignorable="d" 
     d:DesignHeight="450" d:DesignWidth="800"
-    d:DataContext="{d:DesignInstance Type={x:Type documents:W2rcMainFileViewModel}}">
+    d:DataContext="{d:DesignInstance Type={x:Type documents:W2rcFileViewModel}}">
     
     <Grid >
 
